--- a/style.css
+++ b/style.css
@@ -1,3 +1,27 @@
-body {
-color: purple;
+
+body{
+    background: purple;
+    }
+.container{
+    width: 100vw;
+    height: 100vh;
+    display: grid;
+    grid-template-rows: 50% 50%;
+    grid-template-columns: 33% 33% 33%;
+    grid-template-areas:
+	'top top right'
+    'bot bot right';
+}
+.bot{
+    grid-area: bot;
+    background: black;
+}
+
+.top{
+    grid-area: top;
+    background: yellow;
+}
+.right{
+    grid-area: right;
+    background: blue;
 }
