--- a/style.css
+++ b/style.css
@@ -4,14 +4,23 @@
 }
 
 
+@keyframes obrazek_animacja {
+0%  {
+transform: rotate(0deg);
+	}
+100% {
+transform: rotate(360deg);
+	 }
+}
 
 .container {
   display: grid;
   grid-template-columns: 33% 33% 33%;
-  grid-template-rows: repeat(5, 1fr);
-  height: 100vh;
+  grid-template-rows: repeat(6, 1fr);
+  height: 120vh;
   grid-template-areas:
     "top top top"
+	"road road road"
     "left mid right "
     "left mid right "
     "leftv2 mid right "
@@ -28,6 +37,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  position: relative;
  
 }
 
@@ -39,6 +50,7 @@
   background-color: red;
   font-size: 70px;
   font-family: font;
+  
 }
 
 .mid {
@@ -48,15 +60,24 @@
   align-items: flex-start;
   background-color: green;
   font-size: 30px;
- 
   
+ 
+}
+
+.road {
+	grid-area: road;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-image: url('road.png');
+	
+
 }
 
 .header{
- height: 100px;
+ height: 120px;
 
 }
-
 
 .right {
   grid-area: right;
@@ -76,5 +97,31 @@
   background-color: orange;
   font-size: 70px;
   font-family: font;
+
+}
+
+.zegar{
+	
+display: flex;
+  justify-content: center;
+  align-items: center;
+
+  font-size: 60px;
+ 
+}
+
+
+@keyframes jazda{
+  0%{right: 1420px;}
+  50%{right: 0px;}
+  99%{right: 1420px;}
+  100%{transform: scaleX(-1);}
+}
+
+.bolid{
+  position: absolute;
+  height: 100px;
+  top: 235px;
+  right: 1420px;
 }
 
